deploy: 7e469290dbb132f431363c8bdc966b9be3f6755f

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="images/favicon-7be98e91.ico" rel="icon" type="image/ico" />
     <title>Ovation API Reference</title>
 
     <style media="screen">
@@ -282,8 +283,8 @@
   color: #859900;
 }
     </style>
-    <link href="stylesheets/screen-0e56eadd.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print-953e3353.css" rel="stylesheet" media="print" />
+    <link href="stylesheets/screen-fbb7d817.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print-7ae61719.css" rel="stylesheet" media="print" />
       <script src="javascripts/all-b12a2749.js"></script>
 
     <script>
