deploy: e55929d8ffdd90fc417c5c0dcb2c1691d81b3fe3

--- a/index.html
+++ b/index.html
@@ -3126,6 +3126,22 @@ You must first create a Provider Account and can then add associated Providers a
 <td><code>true</code>, <code>false</code></td>
 </tr>
 <tr>
+<td>signedConsent</td>
+<td>requisition</td>
+<td>If specified as true, informed consent was signed by the patient</td>
+<td>No</td>
+<td>boolean</td>
+<td><code>true</code>, <code>false</code></td>
+</tr>
+<tr>
+<td>markAsSigned</td>
+<td>requisition</td>
+<td>If specified as true, the accession status is set to signed if request contains all required fields</td>
+<td>No</td>
+<td>boolean</td>
+<td><code>true</code>, <code>false</code></td>
+</tr>
+<tr>
 <td>patient</td>
 <td>requisition</td>
 <td>Patient record</td>
