deploy: 75b2643d1cf38be1d5357a26797ad3779385dc62

--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
 <tr>
 <td><code>cellPhoneNumber</code></td>
 <td>providerAccountContact</td>
-<td>Contact phone number. Required if <code>communicationPreference</code> is <code>&quot;Text&quot;&quot;</code> or <code>&quot;Cell&quot;&quot;</code></td>
+<td>Contact phone number. Required if <code>communicationPreference</code> is <code>&quot;Text&quot;</code> or <code>&quot;Cell&quot;</code></td>
 <td>No</td>
 <td><code>string</code></td>
 <td></td>
