deploy: 946c5101688c5959da0dd6cbcff98feecbc66415

--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@
         <ul class="toc-footer">
             <li><a href="/">APIs</a></li>
             <li><a href="/webhooks">Webhooks</a></li>
+            <li><a href="/hl7_docs">HL7</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
