--- a/hl7_docs/index.html
+++ b/hl7_docs/index.html
@@ -330,7 +330,7 @@
 
 <p><strong>Version:</strong> 1.0.0</p>
 <h1 id='overview'>Overview</h1>
-<p>Ovation has an integration with sftp to import and export requisition data. Here is documented how you will receive the hl7 content including your fields and also how we expect you to send it to us.</p>
+<p>Ovation has an integration with SFTP to import and export requisition data using HL7 messages. Here is documented how you will receive the HL7 content including your fields and also how we expect you to send it to us.</p>
 <h1 id='hl7-fields'>HL7 Fields</h1>
 <table><thead>
 <tr>
