--- a/index.html
+++ b/index.html
@@ -566,10 +566,6 @@
 
 <p><img src="images/auth-a9cc9b4f.png" alt="alt text" /></p>
 <h1 id='errors'>Errors</h1>
-<aside class="notice">
-This error section is stored in a separate file in <code>includes/_errors.md</code>. Slate allows you to optionally separate out your docs into many files...just save them to the <code>includes</code> folder and add them to the top of your <code>index.md</code>'s frontmatter. Files are included in the order listed.
-</aside>
-
 <p>The API uses the following error codes:</p>
 
 <table><thead>
@@ -588,7 +584,7 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 </tr>
 <tr>
 <td>403</td>
-<td>Forbidden -- The kitten requested is hidden for administrators only.</td>
+<td>Forbidden -- Your request is hidden for administrators only.</td>
 </tr>
 <tr>
 <td>404</td>
@@ -599,8 +595,12 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 <td>Not Acceptable -- You requested a format that isn&#39;t json.</td>
 </tr>
 <tr>
+<td>422</td>
+<td>Unprocessable Entity -- You requested a contained instruction that it was not able to process.</td>
+</tr>
+<tr>
 <td>429</td>
-<td>Too Many Requests -- You&#39;re requesting too many kittens! Slow down!</td>
+<td>Too Many Requests -- You&#39;re performing too many requests.</td>
 </tr>
 <tr>
 <td>500</td>
